--- a/apps/my-finance/src/app/globals.css
+++ b/apps/my-finance/src/app/globals.css
@@ -9,6 +9,25 @@
   }
 }
 
+@layer components {
+  .fi-input {
+    @apply bg-input-base text-input-content;
+    @apply focus:bg-input-accent focus:outline-none;
+    @apply active:bg-input-accent;
+  }
+
+  .fi-control {
+    @apply bg-control-base text-control-content;
+    @apply focus:bg-control-accent focus:outline-none;
+    @apply hover:bg-control-accent;
+  }
+}
+
+body {
+  @apply bg-gradient-to-br from-base-primary to-base-secondary;
+  @apply text-content-primary;
+}
+
 body.loading * {
   transition: none !important;
 }
@@ -37,45 +56,4 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overscroll-behavior-x: none;
-
-  @apply bg-gradient-to-br from-slate-300 to-slate-400;
-  @apply text-base-content-1;
-}
-
-.content-grid {
-  --padding-inline: 1rem;
-  --content-max-width: 900px;
-  --breakout-max-width: 1200px;
-
-  --breakout-size: calc((var(--breakout-max-width) - var(--content-max-width)) / 2);
-
-  display: grid;
-  grid-template-columns:
-    [full-width-start]
-      minmax(var(--padding-inline), 1fr)
-    [breakout-start]
-      minmax(0, var(--breakout-size))
-    [content-start]
-      min(100% - (var(--padding-inline) * 2), var(--content-max-width))
-    [content-end]
-      minmax(0, var(--breakout-size))
-    [breakout-end]
-      minmax(var(--padding-inline), 1fr)
-    [full-width-end];
-}
-
-.content-grid > :not(.breakout, .full-width),
-.full-width > :not(.breakout, .full-width) {
-  grid-column: content;
-}
-
-.content-grid > .breakout {
-  grid-column: breakout;
-}
-
-.content-grid > .full-width {
-  grid-column: full-width;
-
-  display: grid;
-  grid-template-columns: inherit;
 }
