--- a/apps/my-finance/src/app/globals.css
+++ b/apps/my-finance/src/app/globals.css
@@ -7,6 +7,9 @@
   input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
   }
+  input:focus-visible {
+    outline: none;
+  }
 }
 
 @layer components {
