feat: add tab component

--- a/apps/my-finance/src/app/globals.css
+++ b/apps/my-finance/src/app/globals.css
@@ -41,6 +41,10 @@ body.loading * {
   box-sizing: inherit;
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 html {
   height: 100%;
   box-sizing: border-box;
