--- a/apps/fingarden/src/app/globals.css
+++ b/apps/fingarden/src/app/globals.css
@@ -39,14 +39,21 @@
 
     --color-border-base: var(--color-accent-100);
     --color-border-accent: var(--color-accent-500);
+  }
+}
 
-    --color-shadow-base: var(--color-neutral-300);
+@layer components {
+  .page-landing {
+    @apply mx-auto px-4 max-w-3xl py-14;
+  }
+
+  .page-app {
+    @apply mx-auto p-4 max-w-5xl;
   }
 }
 
 @layer base {
   :root {
-    @apply lg:text-lg;
     @apply accent-accent-500;
   }
   h1 {
