--- a/apps/fingarden/src/app/globals.css
+++ b/apps/fingarden/src/app/globals.css
@@ -61,7 +61,11 @@
   }
 
   h2 {
-    @apply text-2xl font-medium;
+    @apply text-2xl lg:text-3xl;
+  }
+
+  h3 {
+    @apply text-xl lg:text-2xl font-light;
   }
 
   input,
